--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta char="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header contains introduction content-->
